Tiger_frontend/project1_test_code_example/tests/correct/var-float-init.tiger
main let
        var a, b : float := 2.6;
in begin
        if(a == b) then
                a := b + 2.9;
		else
				a := 2.3;
        endif;
        printi(a);
end
