Tiger_frontend/project1_test_code_example/tests/errors/parse-error.tiger
main let
        var i, sum : int := 0;
in
begin
        for i := 0 to 99 do
                sum := sum + i;
        enddo;
        
        sum + i; //illegal
        
        printi(sum);
end